--- a/Exercice_6/index.html
+++ b/Exercice_6/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   <title>Exercice 6</title>
 </head>
 <body>
@@ -13,12 +14,13 @@
     <div>
       220 - 304 = {{220-304}}
     </div>
-    <div>
-      220 * 304 = {{220 * 304}}
+    <div class="second"ng-app="">
+      <div>
+        220 * 304 = {{220 * 304}}
+      </div>
+      <div>
+        220/304 = {{220 / 304}}
+      </div>
     </div>
-    <div>
-      220/304 = {{220 / 304}}
-    </div>
-  </div>
-</body>
-</html>
+  </body>
+  </html>
