--- a/Exercice_1/index.html
+++ b/Exercice_1/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
-  <meta charset="utf-8">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <meta charset="utf-8" />
   <title>Exercice 1</title>
 </head>
-<body ng-app="">
+<body>
   <div class="sum">
     220 + 304 = {{220+304}}
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </body>
 </html>
