--- a/Exercice_2/index.html
+++ b/Exercice_2/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <meta charset="utf-8" />
   <title>Exercice 2</title>
 </head>
 <body>
-  <div class="sum" ng-app="">
+  <div class="sum" ng-app>
     220 + 304 = {{220+304}}
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </body>
 </html>
