--- a/Exercice_5/index.html
+++ b/Exercice_5/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-<meta charset="utf-8">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<title>Exercice 5</title>
+  <meta charset="utf-8" />
+  <title>Exercice 5</title>
 </head>
 <body>
-<div class="sum" ng-app="">
-  <h1>AngularJS</h1>
-  <div>
-    220 + 304 = {{220+304}}
+  <div class="sum" ng-app>
+    <h1>AngularJS</h1>
+    <div>
+      220 + 304 = {{220+304}}
+    </div>
+    <div>
+      220 - 304 = {{220-304}}
+    </div>
+    <div>
+      220 * 304 = {{220 * 304}}
+    </div>
+    <div>
+      220/304 = {{220 / 304}}
+    </div>
   </div>
-  <div>
-    220 - 304 = {{220-304}}
-  </div>
-  <div>
-    220 * 304 = {{220 * 304}}
-  </div>
-  <div>
-    220/304 = {{220 / 304}}
-  </div>
-</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </body>
 </html>
