--- a/Exercice_6/index.html
+++ b/Exercice_6/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <meta charset="utf-8" />
   <title>Exercice 6</title>
 </head>
 <body>
@@ -14,7 +13,7 @@
     <div>
       220 - 304 = {{220-304}}
     </div>
-    <div class="second"ng-app="">
+    <div class="second"ng-app>
       <div>
         220 * 304 = {{220 * 304}}
       </div>
@@ -22,5 +21,6 @@
         220/304 = {{220 / 304}}
       </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   </body>
   </html>
