--- a/Exercice_7/index.html
+++ b/Exercice_7/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-<meta charset="utf-8">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-<title>Exercice 7</title>
+  <meta charset="utf-8" />
+  <title>Exercice 7</title>
 </head>
 <body>
-<div class="sum">
-  <h1>AngularJS</h1>
-<div class="second"ng-app="">
-220 + 304 = {{220+304}}
-</div>
-</div>
+  <div class="sum">
+    <h1>AngularJS</h1>
+    <div class="second"ng-app>
+      220 + 304 = {{220+304}}
+    </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </body>
 </html>
